--- a/zarabiaj/stylelogin.css
+++ b/zarabiaj/stylelogin.css
@@ -8,7 +8,6 @@ html{
     margin: 0;
     padding: 0;
     /*background-color: black;*/
-    height: 100vh;
 }
 
 
